--- a/3-condition_with_logic.ipynb
+++ b/3-condition_with_logic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,59 +44,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def entry(input: list[HumanMessage]):\n",
-    "    return input\n",
-    "\n",
-    "def human(input: list[HumanMessage]):\n",
-    "    input[0].content += \" is not Amazing\"\n",
-    "    return input\n",
-    "\n",
-    "def ai(input: list[HumanMessage]):\n",
-    "    input[0].content += \" is Amazing\"\n",
-    "    return input\n",
-    "\n",
-    "def finish(input: list[HumanMessage]):\n",
-    "    input[0].content += \" always!\"\n",
-    "    return input\n",
-    "\n",
-    "def router_node2_or_3(input: list[HumanMessage]):\n",
-    "    if input[0].content == \"human\":\n",
-    "        return \"human_node\"\n",
-    "    else:\n",
-    "        return \"ai_node\""
+    "from langchain_openai import ChatOpenAI\n",
+    "chatModel = ChatOpenAI(base_url=\"http://ai.mtcl.lan:11436/v1\", api_key=\"fake_api_key\", model=\"llama3.1\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
+    "joke_call_count = 0\n",
+    "\n",
+    "def agent(input: list[HumanMessage]):\n",
+    "    return input\n",
+    "\n",
+    "def joke_finder(input: list[HumanMessage]):\n",
+    "    global joke_call_count\n",
+    "    joke_call_count += 1\n",
+    "    print(\"joke_call_count: \", str(joke_call_count))\n",
+    "    print(llm.invoke(input).content)\n",
+    "    #print(chatModel.invoke(input).content)\n",
+    "    return input\n",
+    "\n",
+    "\n",
+    "def router_node1_to_node2(input: list[HumanMessage]):\n",
+    "    if joke_call_count < 5:\n",
+    "        return \"tell_joke\"\n",
+    "    else:\n",
+    "        return \"end_joke\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "graph = MessageGraph()\n",
     "\n",
-    "node1_id = \"entry\"\n",
-    "node2_id = \"human\"\n",
-    "node3_id = \"ai\"\n",
-    "node4_id = \"finish\"\n",
+    "node1_id = \"agent\"\n",
+    "node2_id = \"joke_finder\"\n",
     "\n",
-    "graph.add_node(node1_id, entry)\n",
-    "graph.add_node(node2_id, human)\n",
-    "graph.add_node(node3_id, ai)\n",
-    "graph.add_node(node4_id, finish)\n",
+    "graph.add_node(node1_id, agent)\n",
+    "graph.add_node(node2_id, joke_finder)\n",
     "\n",
     "graph.add_conditional_edges(\n",
     "    node1_id,\n",
-    "    router_node2_or_3,\n",
-    "    {\"human_node\": node2_id, \"ai_node\": node3_id}\n",
+    "    router_node1_to_node2,\n",
+    "    {\"tell_joke\": node2_id, \"end_joke\": END}\n",
     ")\n",
-    "\n",
-    "graph.add_edge(node2_id, node4_id)\n",
-    "graph.add_edge(node3_id, node4_id)\n",
-    "graph.add_edge(node4_id, END)\n",
+    "graph.add_edge(node2_id, node1_id)\n",
     "graph.set_entry_point(node1_id)\n",
     "\n",
     "app = graph.compile()"
@@ -104,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,45 +119,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_graph(app,\"second_run.png\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ai is Amazing always!\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(app.invoke(\"Ai\")[0].content)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "human is not Amazing always!\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(app.invoke(\"human\")[0].content)"
+    "save_graph(app,\"third4_run.png\")"
    ]
   },
   {
